--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,39 @@ a {
 p, h1, h2, h3 {
     @apply mb-6;
 }
+
+.flip-card {
+  background-color: transparent;
+  perspective: 100vw;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* .flip-card-front { */
+/*   background-color: #bbb; */
+/*   color: black; */
+/* } */
+
+.flip-card-back {
+  /* background-color: #2980b9; */
+  /* color: white; */
+  transform: rotateY(180deg);
+}
